<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="123dp"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:id="@+id/ln_Item">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorScreenData"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvItemTemp"
                android:text="@string/celsius"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivItemIcon"
                android:layout_gravity="center"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="@dimen/padding"
                android:layout_width="@dimen/image_size_item"
                android:layout_height="@dimen/image_size_item" />
            <TextView
                android:text="@string/clear_sky"
                android:id="@+id/tvItemDescription"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_data"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:lines="2"/>
            <TextView
                android:id="@+id/tvItemHour"
                android:text="@string/ex_hour"
                android:padding="@dimen/padding"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:background="@color/colorBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>